css/index.css
body{
/* font-family: 'Mustica Pro Sans Serif', sans-serif; */
font-weight: normal;
font-family: 'Mustica Pro Sans Serif', sans-serif;
}
.skill-list{
 background-color: #F6F6F6;
 padding: 32px 20px;
 font-weight: 600;
 font-size: 16px;
}
.research-list-items{
    font-size:20px;
    font-weight: 500;
    width: 60%;
}
#contact-btn.active{
    background-color: #1E1E1E;
}
/* nav link styling */
.nav-list li a{
    color:#8C8A8A;
}
.nav-list li a:hover{
    color:#E1A635
}
.nav-list li a.active{
    color: black;
}

@media screen and (max-width: 768px) {
 .nav-list{
    display: none;
 }
 #menuIcon{
    display: block;
 }
 .close-icon{
    display: block;
 }
}

